####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = Alpha.3df boom2.wav boom.wav cyc4.wav cycles3d.zone dserver.3df floor.3df kaboom.3df langame.3df lanserver.3df mouse.3df Rcognzer.wav recog.wrl teampeg.3df tron2.wrl turn2.wav wall4.3df wheelflicker.wrl 

####### kdevelop will overwrite this part!!! (end)############
