####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libgfx.a

INCLUDES = $(all_includes)

libgfx_a_METASOURCES = AUTO

libgfx_a_SOURCES = wrl.cpp render.cpp math3d.cpp gfx.cpp 


EXTRA_DIST = gfx.cpp gfx.h math3d.cpp render.cpp wrl.cpp 

####### kdevelop will overwrite this part!!! (end)############
