####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libgns.a

INCLUDES = $(all_includes)

libgns_a_METASOURCES = AUTO

libgns_a_SOURCES = zone.cpp node.cpp gnsthreads.cpp gnspackets.cpp gnsmem.cpp gns.cpp 


EXTRA_DIST = gns.cpp gns.h gnsmem.cpp gnsmem.h gnspackets.cpp gnspackets.h gnsthreads.cpp gnsthreads.h node.cpp node.h zone.cpp zone.h 

####### kdevelop will overwrite this part!!! (end)############
