####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libnet.a

INCLUDES = $(all_includes)

libnet_a_METASOURCES = AUTO

libnet_a_SOURCES = dserver.cpp udpproc.cpp udppredictionlist.cpp udpclient.cpp tcpproc.cpp pingclient.cpp netutils.cpp netbase.cpp 


EXTRA_DIST = c3dnetwork.h dserver.h Makefile.am netbase.cpp netbase.h netutils.cpp pingclient.cpp tcpproc.cpp udpclient.cpp udppredictionlist.cpp udppredictionlist.h udpproc.cpp dserver.cpp 

####### kdevelop will overwrite this part!!! (end)############
